[package]
name = "ody-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[[example]]
name = "generate-proto"
path = "examples/generate-proto.rs"

[[example]]
name = "write-config-schema"
path = "examples/write-config-schema.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
ody-app-server-protocol = { workspace = true }
ody-client = { workspace = true }
ody-execpolicy = { workspace = true }
ody-features = { workspace = true }
ody-file-system = { workspace = true }
ody-git-utils = { workspace = true }
ody-model-provider-info = { workspace = true }
ody-network-proxy = { workspace = true }
ody-protocol = { workspace = true }
ody-utils-absolute-path = { workspace = true }
ody-utils-path = { workspace = true }
ody-utils-path-uri = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true, features = ["alloc", "std"] }
gethostname = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
icu_locale_core = { workspace = true }
multimap = { workspace = true }
prost = "0.14.3"
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_ignored = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
toml = { workspace = true, features = ["preserve_order"] }
toml_edit = { workspace = true }
sys-locale = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
wildmatch = { workspace = true }

[target.'cfg(unix)'.dependencies]
dns-lookup = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi-util = { workspace = true }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["router", "transport"] }
tonic-prost-build = { version = "=0.14.3", default-features = false, features = ["transport"] }

[lib]
doctest = false
