[package]
edition.workspace = true
license.workspace = true
name = "ody-context-fragments"
version.workspace = true

[lib]
name = "ody_context_fragments"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
ody-protocol = { workspace = true }
ody-utils-string = { workspace = true }
