load("//:defs.bzl", "ody_rust_crate")

ody_rust_crate(
    name = "core-skills",
    compile_data = glob(
        include = ["**"],
        allow_empty = True,
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
    ),
    crate_name = "ody_core_skills",
)
