[package]
edition.workspace = true
license.workspace = true
name = "ody-core-skills"
version.workspace = true

[lib]
doctest = false
name = "ody_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ody-analytics = { workspace = true }
ody-app-server-protocol = { workspace = true }
ody-config = { workspace = true }
ody-context-fragments = { workspace = true }
ody-exec-server = { workspace = true }
ody-login = { workspace = true }
ody-model-provider = { workspace = true }
ody-otel = { workspace = true }
ody-protocol = { workspace = true }
ody-shell-command = { workspace = true }
ody-skills = { workspace = true }
ody-utils-absolute-path = { workspace = true }
ody-utils-output-truncation = { workspace = true }
ody-utils-path-uri = { workspace = true }
ody-utils-plugins = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
