load("//:defs.bzl", "ody_rust_crate")

ody_rust_crate(
    name = "core",
    compile_data = glob(
        include = ["**"],
        allow_empty = True,
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
    ),
    crate_name = "ody_core",
    extra_binaries = [
        "//ody-rs/bwrap:bwrap",
        "//ody-rs/linux-sandbox:ody-linux-sandbox",
        "//ody-rs/rmcp-client:test_stdio_server",
        "//ody-rs/rmcp-client:test_streamable_http_server",
        "//ody-rs/cli:ody",
        "//ody-rs/windows-sandbox-rs:ody-command-runner",
        "//ody-rs/windows-sandbox-rs:ody-windows-sandbox-setup",
    ],
    integration_test_timeout = "long",
    run_tests_with_wine_exec = True,
    rustc_env = {
        # Keep manifest-root path lookups inside the Bazel execroot for code
        # that relies on env!("CARGO_MANIFEST_DIR").
        "CARGO_MANIFEST_DIR": "ody-rs/core",
    },
    test_data_extra = [
        "config.schema.json",
    ] + glob([
        "src/**/snapshots/**",
    ]) + [
        # This is a bit of a hack, but empirically, some of our integration tests
        # are relying on the presence of this file as a repo root marker. When
        # running tests locally, this "just works," but in remote execution,
        # the working directory is different and so the file is not found unless it
        # is explicitly added as test data.
        #
        # TODO(aibrahim): Update the tests so that `just bazel-remote-test`
        # succeeds without this workaround.
        "//:AGENTS.md",
    ],
    test_shard_counts = {
        "core-all-test": 16,
        "core-unit-tests": 8,
    },
    test_tags = ["no-sandbox"],
    unit_test_timeout = "long",
)
